# agent-shield

./: .gitignore  CLAUDE.md  README.md
.claude/: CLAUDE.md
.github/workflows/: fast-gates.yml
agents/: provision-poc-eval.sh
certs/: gateway-cert.pem  gateway-key.pem
charts/agentshield/: Chart.yaml  values-eks.yaml  values.yaml
docs/: 2026-06-24-ai-safety-platform-prd.md  authorization-model.md  decisions.md  future-improvements.md  spec.md
docs/bugs/: batch-eval-fixes.md  deployment-shared-name-and-drift.md  durable-workflow-live-path.md  e3-never-ran-tag-not-bumped.md  eks-gateway-tls-regen-breaks-login.md  eval-judge-scoring-fix.md  hitl-multi-approval-resume-regression.md  knowledge-search-tool-leak-edit-modal.md  langfuse-clickhouse-oom.md  langfuse-missing-s3-event-bucket.md  langfuse-trace-access-sso-and-membership.md  merge-migration-renumber-drift.md  migration-0070-dangling-down-revision-0069.md  ollama-llm-provider-support.md  opa-user-identity-floor-denies-tools-missing-x-user-sub.md  python-tool-graph-build-kwargs.md  reactive-hitl-approval-status-session-run-mismatch.md  runstep-output-text-coerced-500.md  sandbox-hitl-playground-context.md  side-effecting-lost-on-declarative-runner-path.md  tool-schema-keyerror-graph-build.md  webhook-eval-door-silent-failures.md  webhook-invoker-grant-auth-mode-flip.md  workflow-ledger-rehydrate-and-memory-tab.md  workflow-run-e2e-fix.md
docs/debugging/: 001-hitl-not-triggering.md  002-hitl-no-response-in-browser.md  003-opa-bundle-5min-cold-start.md  004-multitool-hitl-concurrency.md  005-publish-blank-and-adversarial-gate.md  006-production-chat-fk-mismatch.md  007-production-tool-credentials-missing.md  008-production-opa-identity-parity.md  009-production-hitl-empty-queue-agent-id.md  010-cost-sweep-nameerror-hidden-by-stub.md  011-workflow-traces-empty-dns-export-failure.md  012-hitl-second-approval-orphaned.md  troubleshooting-playbook.md
docs/design/: authorization-model-spec.md  catalog-detail-redesign.md  context-storage-architecture.md  context-storage-poc-2b-rich-console.md  context-storage-poc-3-preferences.md  (+22 more)
scripts/: backup-postgres.sh  check-filter-engine-parity.sh  check-suite-guards.sh  check-tag-content-coupling.sh  deploy-cp1-appid.sh  deploy-cp1-e2.sh  deploy-cp1-e3.sh  deploy-cp1-e5.sh  deploy-cp1-eval.sh  deploy-cp1-ws2.sh  deploy-cp1-ws3.sh  deploy-cp1-ws4.sh  deploy-cp1.sh  deploy-cp2-eval.sh  deploy-cp2-ws2.sh  deploy-cp2-ws3.sh  deploy-cp2.sh  deploy-cp3-e1.sh  deploy-cp3-full-platform.sh  deploy-cp3-ws3.sh  deploy-cp3.sh  deploy-cpe2e.sh  deploy-eks.sh  gateway-proxy.sh  onboard-team.sh  post-install.sh  purge-test-agents.sh  reconcile-langfuse-hostalias.sh  restore-postgres.sh  run-garak.sh  seed-defaults.sh  seed-platform-admin-role.sh  setup-envoy-gateway.sh  smoke-test-10.1-playground-api.sh  smoke-test-10.2-playground-studio.sh  smoke-test-9.3-hitl-authority.sh  smoke-test-cp-wa-rename-crud.sh  smoke-test-cp-wb-run-tree.sh  smoke-test-cp-wc-full-e2e.sh  smoke-test-cp1-appid-behaviour.sh  (+48 more)
sdk/: README.md  pyproject.toml
sdk/agentshield_sdk/: __init__.py  agent.py  checkpointer.py  cli.py  config.py  durable.py  graph_builder.py  handoff.py  hitl.py  llm.py  mock_opa.py  mock_safety.py  opa_client.py  otel.py  runner.py  safety_client.py  server.py  streaming.py  tool_decorator.py  tool_executor.py  tool_resolver.py  tracing.py
sdk/tests/: conftest.py  test_durable.py  test_otel_wiring.py  test_tool_executor_schema.py
studio/: .dockerignore  Dockerfile  Dockerfile.demo  index.html  nginx.demo.conf  package-lock.json  package.json  playwright.config.ts  preview-deploy.yaml  tailwind.config.js  vitest.config.ts
(+861 files in other folders)
